--- a/game/dota_addons/ffrenzy/scripts/vscripts/statcollection/settings.kv
+++ b/game/dota_addons/ffrenzy/scripts/vscripts/statcollection/settings.kv
@@ -1,11 +1,11 @@
 "StatInfo"
 {
     // Registered gamemode ID from http://getdotastats.com/#s2__my__mods
-    "modID"             "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+    "modID"             "4e39c4171c94ce9df860cc679e79fab8"
     
     // If you want to implement custom stats, contact an admin to setup your schema and change this ID
     // Otherwise leave it unchanged
-    "schemaID"          "XXXXXXXXXXXXXXXX"
+    "schemaID"          "7G8F6K0ZHN62T7GH" //v2
 
     // Do we need to enable the round API or not.
     "HAS_ROUNDS"        "false"
